--- a/NetRocket/NetRocket.csproj
+++ b/NetRocket/NetRocket.csproj
@@ -2,6 +2,22 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.1.0</Version>
+    <Authors>Sergey Semenov</Authors>
+    <Company>SynWeb</Company>
+    <Product>Seed122</Product>
+    <PackageLicenseUrl>https://github.com/synweb/NetRocket/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/synweb/NetRocket</PackageProjectUrl>
+    <PackageIconUrl>https://ru.gravatar.com/userimage/129871590/ada7f995977d39d9bf129ed4a6c23060.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/synweb/NetRocket</RepositoryUrl>
+    <PackageTags>socket network two-way communication protocol json</PackageTags>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Copyright>Copyright ©2017 Studio SynWeb</Copyright>
+    <PackageReleaseNotes>The very first version</PackageReleaseNotes>
+    <Description>Two-way web communication protocol based on sockets for real-time apps</Description>
+    <PackageId>SynWeb.NetRocket</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
